--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,34 @@
         android:theme="@style/Theme.M2024B"
         tools:targetApi="31">
         <activity
-            android:name=".ShowReceipt"
-            android:exported="false" />
-        <activity
-            android:name=".TipCalculator"
+            android:name=".ColorMixer"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ShowReceipt"
+            android:exported="false" />
+        <activity
+            android:name=".TipCalculator"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ShowMessage"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.M2024B">
-
-        </activity>
+            android:theme="@style/Theme.M2024B"></activity>
     </application>
 
 </manifest>
