--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,14 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
+<!--    permissions for location-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+<!--    permission for Internet-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +24,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.M2024B"
         tools:targetApi="31">
+
+        <activity
+            android:name=".LocationActivity"
+            android:exported="true">
+
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
+
+
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
+        </activity>
+
         <activity
             android:name=".student_using_database.EditStudentActivity"
             android:exported="false" />
