--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,18 @@
         android:theme="@style/Theme.M2024B"
         tools:targetApi="31">
         <activity
+            android:name=".primary_detail_demo.ItemDetailHostActivity"
+            android:exported="true"
+            android:label="@string/title_activity_item_detail_host"
+            android:resizeableActivity="true"
+            tools:targetApi="24">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".activity_for_result.ActivityForResultDemo"
             android:exported="true">
             <intent-filter>
